# slugify-filenames

./: .cspell.json  .gitignore  Cargo.toml  README.md  TODO.md  build-linux.sh  gentests.sh  push.sh  rust-toolchain.toml  slugify-filenames.rs  slugify-string.rs  test
.cargo/: config.toml
slugify/: cli.rs  errors.rs  lib.rs  string.rs
slugify/cli/: filenames.rs  parameters.rs
src/: cli.rs  errors.rs  lib.rs  string.rs  unicode.rs
src/cli/: aliasing.rs  filenames.rs  parameters.rs  string.rs  verbosity.rs
tests/: README.md  genfiles.py  pyproject.toml  test-cli.rs  test_cli.rs
