[package]
name = "slugify"
version = "0.5.1"
edition = "2024"
autoexamples = false
autobenches = false
autotests = false
default-run = "slugify-string"

[package.metadata]
targets = [
    "aarch64-apple-darwin",
    # "x86_64-unknown-linux-gnu",
    # "aarch64-unknown-linux-gnu",
]


[lib]
name = "slugify"
path = "src/lib.rs"
# crate-type = ["dylib"]

doctest = false
bench = false


[[bin]]
name = "slugify-filenames"
path = "src/bin/slugify-filenames.rs"
doctest = false
bench = false
doc = false

[[bin]]
name = "slugify-string"
path = "src/bin/slugify-string.rs"
doctest = false
bench = false
doc = false

# [[test]]
# name = "test_cli"
# path = "tests/test_cli.rs"

[dependencies]
clap = { version = "4.5.40", features = ["derive", "env", "string", "unicode", "wrap_help"] }
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
iocore = { version = "3.1.0" }
any_ascii = "0.3.3"
heck = "0.5.0"
strip-ansi-escapes = "0.2.1"
log = "0.4.33"
fern = "0.7.1"
env_logger = "0.11.10"
humantime = "2.3.0"

[dev-dependencies]
debug-et-diagnostics = "0.3.1"
iocore-test = "3.1.0"
