[package]
name = "slugify-filenames"
version = "0.5.1"
edition = "2024"
autoexamples = false
autobenches = false
autotests = false
description = "tool to \"slugify\" strings and filenames, available as a rust library and as two standalone command-line binaries. The slugify-filenames renames all files in the given paths (or current path if none is given) making them ascii-safe and spaceless, ultimately making the task of handling filenames never require escaping. Special characters are transliterated, special chars are kept to an ascii-safe minimum and the whole filename or string are lowercased."
default-run = "slugify-string"
documentation = "https://docs.rs/slugify-filenames"
readme = "README.md"
repository = "https://github.com/gabrielfalcao/slugify-filenames"
homepage = "https://github.com/gabrielfalcao/slugify-filenames"
license = "GPL-3.0+"
authors = ["Gabriel DeMoura <gabrielteratos@gmail.com>"]
categories = ["filesystem"]


[lib]
name = "slugify_filenames"
path = "src/lib.rs"

doctest = false
bench = false


[[bin]]
name = "slugify-filenames"
path = "src/bin/slugify-filenames.rs"
doctest = false
bench = false
doc = false

[[bin]]
name = "slugify-string"
path = "src/bin/slugify-string.rs"
doctest = false
bench = false
doc = false

# [[test]]
# name = "test_cli"
# path = "tests/test_cli.rs"

[dependencies]
clap = { version = "4.5.40", features = ["derive", "env", "string", "unicode", "wrap_help"] }
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
iocore = { version = "3.1.0" }
any_ascii = "0.3.3"
strip-ansi-escapes = "0.2.1"
log = "0.4.33"
humantime = "2.3.0"
heck = "0.5.0"
fern = "0.7.1"

[dev-dependencies]
debug-et-diagnostics = "0.3.1"
iocore-test = "3.1.0"
